--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 chrono = { version = "0.4.19", features = ["serde"] }
 clap = "3.0.12"
 cpe = "0.1.0"
-diesel =  { version = "1.4.7", features = ["postgres", "r2d2"] }
+diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
 dotenv = "0.15.0"
 env_logger = "0.9.0"
 flate2 = "1.0.21"
@@ -26,5 +26,8 @@ lazy_static = "1.4.0"
 diesel_json = "0.1.1"
 actix-web = "4.0.0-rc.1"
 actix-cors = "0.6.0-beta.8"
+tracing-log = "0.1.2"
+tracing = "0.1.29"
+tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
 tracing-actix-web = "0.5.0-rc.1"
 anyhow = "1.0.53"
