--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,8 @@ services:
     environment:
       - RUST_BACKTRACE=1
       - RUST_LOG=info
-      - ROCKET_LOG=off
-      - ROCKET_ADDRESS=0.0.0.0
-      - ROCKET_PORT=8000
+      - KEPLER_ADDRESS=0.0.0.0
+      - KEPLER_PORT=8000
       - DATABASE_URL=postgres://kepler:kepler@db/kepler
     ports:
       - "8000:8000"
