style: change names

--- a/ofelia.ini
+++ b/ofelia.ini
@@ -1,6 +1,6 @@
 [job-exec "kepler-update-nist"]
 schedule = @every 3h
-command = /usr/local/bin/kepler import_nist recent --data /tmp --fresh
+command = /usr/local/bin/kepler import_nist recent --data /tmp --refresh
 container =	kepler
 no-overlap = true
 
