--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
 tracing-actix-web = "0.5.1"
 anyhow = "1.0.66"
 domain-db = {path = "domain-db"}
+serde_json = "1.0.79"
 
 [workspace]
 members = ["domain-db"]
