--- a/domain-db/Cargo.toml
+++ b/domain-db/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "domain-db"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
+cpe = { path = "../cpe" }
+
 log = "0.4"
 thiserror = "1"
 anyhow = "1"
@@ -24,5 +26,3 @@ r2d2-diesel = "1.0.0"
 diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
 diesel_json = "0.1.1"
 diesel_migrations = "1.4.0"
-
-cpe = { path = "../cpe" }
