--- a/kepler/Cargo.toml
+++ b/kepler/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 [dependencies]
 domain-db = { path = "../domain-db" }
 
-clap = {version = "4.3.15", features = ["derive"]}
+clap = { version = "4.3.15", features = ["derive"] }
 env_logger = "0.10.0"
 log = "0.4.19"
 serde = { version = "1.0.171", features = ["derive"] }
@@ -23,3 +23,5 @@ tracing-subscriber = { version = "0.3.17 ", features = ["env-filter"] }
 tracing-actix-web = "0.7.5"
 anyhow = "1.0.72"
 serde_json = "1.0.103"
+config = { version = "0.13.3", default-features = false }
+dotenvy = "0.15.7"
