--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,6 +44,7 @@ jobs:
         with:
           context: .
           push: true
+          visibility: public
           platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
       
