--- a/domain-db/Cargo.toml
+++ b/domain-db/Cargo.toml
@@ -8,16 +8,18 @@ license.workspace = true
 [dependencies]
 cpe = { path = "../cpe" }
 
-log = "0.4"
+serde = { workspace = true }
+serde_json = { workspace = true }
+log = { workspace = true }
+anyhow = { workspace = true }
+chrono = { workspace = true }
+
 thiserror = "1"
-anyhow = "1"
 version-compare = "0.1.1"
-serde = { version = "1", features = ["derive"] }
 reqwest = { version = "0.11.18", features = ["blocking"] }
 regex = "1.9.1"
 lazy_static = "1.4.0"
-serde_json = "1.0.103"
 flate2 = "1.0.26"
-diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
+diesel = { version = "2.2.10", features = ["postgres", "r2d2"] }
 diesel_json = "0.2.1"
-diesel_migrations = "2.1.0"
+diesel_migrations = "2.2.0"
