--- a/kepler/Cargo.toml
+++ b/kepler/Cargo.toml
@@ -9,10 +9,13 @@ license.workspace = true
 [dependencies]
 domain-db = { path = "../domain-db" }
 
+serde = { workspace = true }
+serde_json = { workspace = true }
+anyhow = { workspace = true }
+log = { workspace = true }
+
 clap = { version = "4.3.15", features = ["derive"] }
 env_logger = "0.10.0"
-log = "0.4.19"
-serde = { version = "1.0.171", features = ["derive"] }
 lru = "0.11.0"
 lazy_static = "1.4.0"
 actix-web = "4.3.1"
@@ -21,7 +24,6 @@ tracing-log = "0.1.3"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17 ", features = ["env-filter"] }
 tracing-actix-web = "0.7.5"
-anyhow = "1.0.72"
-serde_json = "1.0.103"
+
 config = { version = "0.13.3", default-features = false }
 dotenvy = "0.15.7"
