--- a/kepler/Cargo.toml
+++ b/kepler/Cargo.toml
@@ -13,6 +13,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
 log = { workspace = true }
+dotenvy = {workspace = true}
 
 clap = { version = "4.3.15", features = ["derive"] }
 env_logger = "0.10.0"
@@ -26,4 +27,4 @@ tracing-subscriber = { version = "0.3.17 ", features = ["env-filter"] }
 tracing-actix-web = "0.7.5"
 
 config = { version = "0.13.3", default-features = false }
-dotenvy = "0.15.7"
+
