--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,20 @@
 [workspace]
+resolver = "2"
+
 members = ["cpe", "domain-db", "kepler"]
 
 [workspace.package]
 version = "0.2.0"
 authors = ["Exein <engineering@exein.io>"]
-edition = "2021"
+edition = "2024"
 license = "Apache-2.0"
+
+
+[workspace.dependencies]
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
+anyhow = "^1"
+log = "0.4"
+chrono = { version = "0.4.40", features = ["clock"] }
+dotenvy = "0.15"
+test-case = "3.3.0"
