chore(kepler): rename env variable for kepler import batch size

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - DB_USER=kepler
       - DB_PASSWORD=kepler
       - DB_DATABASE=kepler
-      - KEPLER_BATCH_SIZE=5000 
+      - KEPLER__BATCH_SIZE=5000 
     ports:
       - "8000:8000"
 
